# ImGuiTemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  vcpkg.json
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
FinancialPlanner/: CMakeLists.txt  Core.cpp  Core.h  FinancialPlanner.cpp  FinancialPlanner.h  includeImGui.h  main.cpp
ProgramNameExample/: CMakeLists.txt  EntryPointExample.cpp  EntryPointExample.h  EntryPointExample.hpp  main.cpp  settings.hpp
ProgramNameExample/Core/: CMakeLists.txt  RenderCore.cpp  RenderCore.hpp  RenderCore_OpenGl.cpp  RenderCore_OpenGl.hpp  RenderCore_SFML.cpp  RenderCore_SFML.hpp
ProgramNameExample/assets/: CMakeLists.txt
ProgramNameExample/src/: CMakeLists.txt  ExampleClassOpenGl.cpp  ExampleClassOpenGl.hpp  ExampleClassSFML.cpp  src.cpp
ProgramNameExample/src_example/: CMakeLists.txt  ExampleClassSFML.hpp
